--- a/frontend/src/components/School/School.css
+++ b/frontend/src/components/School/School.css
@@ -74,7 +74,7 @@
   @media screen and (max-width: 650px){
 
     #School{
-        margin-top: 65rem;
+        margin-top: 63rem;
         margin-bottom: 30rem;
     }
     
